--- a/index.html
+++ b/index.html
@@ -4,9 +4,178 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Spline+Sans:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Ponte-Pilas</title>
   </head>
   <body>
-    <h1>Hola mundo</h1>
+    <div class="contaner">
+      <!-- section 1 -->
+      <div class="section">
+        <div class="navbar horizontal">
+          <div>
+            <h1>LOGO</h1>
+          </div>
+          <div class="horizontal">
+            <button class="home">Inicio</button>
+            <button class="about">Sobre nosotros</button>
+            <button class="services">Servicios</button>
+            <button class="news">Noticias</button>
+            <button class="contact">Contactanos</button>
+            <button class="login">login</button>
+          </div>
+        </div>
+        <div class="img-fondo vertical">
+          <div class="espacio"></div>
+          <h2 class="row-3">Tus derechos importan, conócelos y hazlos</h2>
+          <h2 class="cumplir">CUMPLIR</h2>
+          <br />
+          <p>
+            Te brindamos información sobre leyes laborales y tributacion para
+            hacertelo más sencillo.
+          </p>
+        </div>
+      </div>
+      <!-- section 2 -->
+      <div class="section2 vertical">
+        <div class="section2-1 vertical">
+          <h2>Desafío</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
+            doloremque debitis quos magni aperiam commodi harum, quod nostrum
+            repellendus repudiandae modi non, omnis veritatis dolor rem
+            molestiae. Illo, vitae atque! Lorem ipsum dolor sit amet,
+            consectetur adipisicing elit. Deleniti, ut. Beatae repudiandae culpa
+            eum explicabo laborum eveniet ipsum fugiat, magnam, odit sed
+            excepturi nisi? Libero voluptatum harum maiores adipisci corrupti!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae,
+            inventore est eligendi ullam reiciendis exercitationem explicabo
+            nostrum molestias cumque quia repellendus amet? Rerum aut ea tenetur
+            cupiditate totam dolore culpa?
+          </p>
+          <br />
+        </div>
+
+        <div class="section2-2 horizontal">
+          <div class="section2-a vertical">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
+              itaque possimus vel sit quam voluptatem soluta magnam temporibus
+              numquam, ipsa cumque labore iusto. Consequuntur in quasi eius
+              vitae illo totam!
+            </p>
+          </div>
+          <div class="section2-b">
+            <!-- <img class="imagen-sect-2" src="" alt="" /> -->
+          </div>
+        </div>
+      </div>
+      <!-- section 3 -->
+      <div class="section3 vertical">
+        <div class="section3-1 vertical">
+          <h2>Sobre</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas
+            voluptatem rerum praesentium consequatur explicabo quo adipisci,
+            dolorem quibusdam! Mollitia possimus ipsum quis officia deleniti
+            voluptatum! Culpa alias assumenda ea quidem! Lorem ipsum dolor, sit
+            amet consectetur adipisicing elit. Corporis, quam nisi doloribus
+            quas minus earum repellendus ducimus fugit ratione sit nam placeat
+            iusto. Ullam nisi esse consectetur alias quaerat reiciendis! Lorem
+            ipsum, dolor sit amet consectetur adipisicing elit. Iure fugit
+            nulla, fugiat corrupti enim quis atque minima in ab pariatur dolorem
+            eum maxime quidem porro est consequuntur placeat laudantium sit.
+          </p>
+          <br />
+        </div>
+        <div class="section3-2 horizontal">
+          <div class="card1 vertical">
+            <div>
+              <img class="img-card" src="imagenes/calculator.png" alt="" />
+            </div>
+            <strong>Calculadora de prestaciones sociales</strong>
+            <p>
+              Saca el calculo de la tributacion que te corresponden a pagar de
+              manera sencilla y rápida.
+            </p>
+          </div>
+          <div class="card2 vertical">
+            <div><img class="img-card" src="imagenes/tax.png" alt="" /></div>
+            <strong>Orientación de derechos laborales</strong>
+            <p>
+              Información de tus derechos laborales para que estés informado y
+              los hagas cumplir conforme a la norma.
+            </p>
+          </div>
+          <div class="card3 vertical">
+            <div>
+              <img class="img-card" src="imagenes/legal-document.png" alt="" />
+            </div>
+            <strong>Orientacion de tributacion</strong>
+            <p>
+              Todo lo que nesecitas saber sobre tributación y cuales te
+              corresponde pagar.
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- section 4 -->
+      <div class="section4 vertical">
+        <div class="section4-1 vertical"><h2>Tributación</h2></div>
+        <div class="section4-2 horizontal">
+          <div class="section4-a">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
+              itaque possimus vel sit quam voluptatem soluta magnam temporibus
+              numquam, ipsa cumque labore iusto. Consequuntur in quasi eius
+              vitae illo totam!
+            </p>
+          </div>
+          <div class="section4-b">
+            <img class="money" src="imagenes/money-bag.png" alt="" />
+          </div>
+        </div>
+      </div>
+      <!-- section 5 -->
+      <div class="section5 vertical">
+        <div class="espacio-top"></div>
+        <div class="espacio-center horizontal">
+          <div class="section5-a vertical">
+            <h2>section 1</h2>
+          </div>
+          <div class="section5-b vertical">
+            <h2>section 2</h2>
+          </div>
+          <div class="section5-c vertical">
+            <h2>section 3</h2>
+          </div>
+        </div>
+        <div class="espacio-bottom"></div>
+      </div>
+      <div class="footer vertical">
+        <p>© Copyright ©2022 All rights reserved</p>
+      </div>
+    </div>
+    <!-- JavaScript Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <script src="script.js"></script>
   </body>
 </html>
