--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Ponte-Pilas</title>
   </head>
   <body>
-    <div class="contaner">
+    <div class="container">
       <!-- section 1 -->
       <div class="section">
         <div class="navbar horizontal">
@@ -146,7 +146,7 @@
             </p>
           </div>
           <div class="section4-b">
-            <img class="money" src="imagenes/money-bag.png" alt="" />
+            <img class="money" src="imagenes/money-bag.png" alt="tributacion" />
           </div>
         </div>
       </div>
