--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             <button class="services">Servicios</button>
             <button class="news">Noticias</button>
             <button class="contact">Contactanos</button>
-            <button class="login">login</button>
+            <a href="Login.html"> <button class="login">Login</button></a>
           </div>
         </div>
-        <div class="img-fondo vertical">
+        <div class="img-fondo vertical" style="background-image: url(imagenes/workers.png)">
           <div class="espacio"></div>
           <h2 class="row-3">Tus derechos importan, conócelos y hazlos</h2>
           <h2 class="cumplir">CUMPLIR</h2>
