--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Ponte-Pilas</title>
   </head>
   <body>
-    <div class="container">
+    <div class="contaner">
       <!-- section 1 -->
       <div class="section">
         <div class="navbar horizontal">
@@ -39,7 +39,10 @@
             <a href="Login.html"> <button class="login">Login</button></a>
           </div>
         </div>
-        <div class="img-fondo vertical" style="background-image: url(imagenes/workers.png)">
+        <div
+          class="img-fondo vertical"
+          style="background-image: url(imagenes/workers.png)"
+        >
           <div class="espacio"></div>
           <h2 class="row-3">Tus derechos importan, conócelos y hazlos</h2>
           <h2 class="cumplir">CUMPLIR</h2>
@@ -114,7 +117,12 @@
             </p>
           </div>
           <div class="card2 vertical">
-            <div><img class="img-card" src="imagenes/tax.png" alt="" /></div>
+            <div>
+              <a href="derecho.html">
+
+                <img class="img-card" src="imagenes/tax.png" alt="derechos" /></div>
+              </a>
+              
             <strong>Orientación de derechos laborales</strong>
             <p>
               Información de tus derechos laborales para que estés informado y
