--- a/derecho.html
+++ b/derecho.html
@@ -12,7 +12,6 @@
       href="https://fonts.googleapis.com/css2?family=Spline+Sans:wght@500&display=swap"
       rel="stylesheet"
     />
-    <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -22,108 +21,219 @@
     <link rel="stylesheet" href="style.css" />
     <title>Conoce tus derechos</title>
   </head>
-  <body>
-    <div style="background-color: #070d18">
-      <div class="nav flex-column" style="background-color: #070d18">
-        <div class="navbar">
-          <nav class="navbar navbar-light fixed-top">
-            <div class="container-fluid">
-              <img
-                src="imagenes/lawyer-filling-document.jpg"
-                alt="derechos"
-                style="border-radius: 15px; width: 100px; height: 100px"
-              />
-
-              <a class="navbar-brand" href="#" style="color: white"
-                >Derechos Laborales</a
-              >
-              <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="offcanvas"
-                data-bs-target="#offcanvasNavbar"
-                aria-controls="offcanvasNavbar"
-                style="background-color: white"
-              >
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div
-                class="offcanvas offcanvas-end"
-                tabindex="-1"
-                id="offcanvasNavbar"
-                aria-labelledby="offcanvasNavbarLabel"
-              >
-                <div class="offcanvas-header">
-                  <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
-                    Offcanvas
-                  </h5>
-                  <button
-                    type="button"
-                    class="btn-close text-reset"
-                    data-bs-dismiss="offcanvas"
-                    aria-label="Close"
-                  ></button>
-                </div>
-                <div class="offcanvas-body">
-                  <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                    <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#"
-                        >Home</a
-                      >
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                      <a
-                        class="nav-link dropdown-toggle"
-                        href="#"
-                        id="offcanvasNavbarDropdown"
-                        role="button"
-                        data-bs-toggle="dropdown"
-                        aria-expanded="false"
-                      >
-                        Dropdown
-                      </a>
-                      <ul
-                        class="dropdown-menu"
-                        aria-labelledby="offcanvasNavbarDropdown"
-                      >
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li>
-                          <a class="dropdown-item" href="#">Another action</a>
-                        </li>
-                        <li>
-                          <hr class="dropdown-divider" />
-                        </li>
-                        <li>
-                          <a class="dropdown-item" href="#"
-                            >Something else here</a
-                          >
-                        </li>
-                      </ul>
-                    </li>
-                  </ul>
-                  <form class="d-flex">
-                    <input
-                      class="form-control me-2"
-                      type="search"
-                      placeholder="Search"
-                      aria-label="Search"
-                    />
-                    <button class="btn btn-outline-success" type="submit">
-                      Search
-                    </button>
-                  </form>
+  <body id="body">
+    <!-- header y navbar lateral -->
+    <header  style="background-color: #070d18">
+        <div class="nav flex-column" >
+          <div class="navbar">
+            <nav class="navbar navbar-light fixed-top">
+              <div class="container-fluid">
+                <a class="navbar-brand" href="derecho.html" style="color: white">
+                  <img
+                    src="imagenes/lawyer-filling-document.jpg"
+                    alt=""
+                    width="80"
+                    height="64"
+                    class="d-inline-block align-text-center"
+                    style="border-radius: 15px; margin-right: 15px;"
+                  />
+                  Derechos Laborales
+                </a>
+                <button
+                  class="navbar-toggler"
+                  type="button"
+                  data-bs-toggle="offcanvas"
+                  data-bs-target="#offcanvasNavbar"
+                  aria-controls="offcanvasNavbar"
+                  style="background-color: white"
+                >
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div
+                  class="offcanvas offcanvas-end"
+                  tabindex="-1"
+                  id="offcanvasNavbar"
+                  aria-labelledby="offcanvasNavbarLabel"
+                >
+                  <div class="offcanvas-header">
+                    <img src="imagenes/workers (1).png" alt="logo" />
+                    <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
+                      LOGO
+                    </h5>
+                    <button
+                      type="button"
+                      class="btn-close text-reset"
+                      data-bs-dismiss="offcanvas"
+                      aria-label="Close"
+                    ></button>
+                  </div>
+                  <div class="offcanvas-body" style="background-color: #42bdec">
+                    <ul class="navbar-nav flex-grow-1 pe-3">
+                      <li class="nav-item">
+                        <a
+                          style="color: white"
+                          class="nav-link active"
+                          aria-current="page"
+                          href="index.html"
+                          ><img
+                            src="imagenes/home.png"
+                            alt="inicio"
+                            width="50"
+                            height="44"
+                          />
+                          Inicio</a
+                        >
+                      </li>
+                      <li class="nav-item">
+                        <a
+                          style="color: white"
+                          class="nav-link"
+                          href="derecho.html"
+                          ><img
+                            src="imagenes/laws.png"
+                            alt="derechos"
+                            width="50"
+                            height="44"
+                          />
+                          Derechos Laborales</a
+                        >
+                      </li>
+                      <li class="nav-item">
+                        <a style="color: white" class="nav-link" href="#"
+                          ><img
+                            src="imagenes/money-bag (1).png"
+                            alt="tributacion"
+                            width="50"
+                            height="44"
+                          />
+                          Tributación</a
+                        >
+                      </li>
+                      <li class="nav-item">
+                        <a style="color: white" class="nav-link" href="#"
+                          ><img
+                            src="imagenes/college.png"
+                            alt="tributacion"
+                            width="50"
+                            height="44"
+                          />
+                          Sunafil</a
+                        >
+                      </li>
+                      <li class="nav-item dropdown">
+                        <a
+                          style="color: white"
+                          class="nav-link dropdown-toggle"
+                          href="#"
+                          id="offcanvasNavbarDropdown"
+                          role="button"
+                          data-bs-toggle="dropdown"
+                          aria-expanded="false"
+                        >
+                          Calculadoras
+                        </a>
+                        <ul
+                          class="dropdown-menu"
+                          aria-labelledby="offcanvasNavbarDropdown"
+                        >
+                          <li><a class="dropdown-item" href="#">...</a></li>
+                          <li>
+                            <a class="dropdown-item" href="#">...</a>
+                          </li>
+                          <li>
+                            <hr class="dropdown-divider" />
+                          </li>
+                          <li>
+                            <a class="dropdown-item" href="#"
+                              >Something else here</a
+                            >
+                          </li>
+                        </ul>
+                      </li>
+                    </ul>
+                    <form class="d-flex">
+                      <input
+                        class="form-control me-2"
+                        type="search"
+                        placeholder="Search"
+                        aria-label="Search"
+                      />
+                      <button class="btn align-text-center" type="submit">
+                        Search
+                      </button>
+                    </form>
+                  </div>
                 </div>
               </div>
-            </div>
-          </nav>
-          <div></div>
+            </nav>
+            <div></div>
+          </div>
         </div>
+      
+    </header>
+    <!-- parrafo explicativo -->
+    <div class="container">
+      <h4>Derechos legales del trabajador</h4>
+      <p>
+        <p>
+
+          aqui va una pequeña definicion 
+        </p>
+        Lorem ipsum dolor, sit amet consectetur
+        adipisicing elit. Qui facere vero error, molestiae debitis saepe quo
+        quia in culpa, tenetur maiores nulla libero nisi! Asperiores, atque!
+        Minus, ipsam? Facere, natus. Quo doloremque impedit, at quae in
+        molestiae architecto perferendis aperiam. Mollitia incidunt rerum
+        ducimus culpa perspiciatis animi. Laudantium adipisci itaque suscipit
+        doloribus fugit, ex facere accusamus reiciendis mollitia tempora
+        voluptates? 
+        <p>
+
+          a continuacion reflejaremos los preguntas mas comunes
+        </p>
+      </p>
+    </div>
+    <!-- acordeones -->
+    <div>
+<div class="accordion" id="accordionExample" >
+  <div class="accordion-item" >
+    <h2 class="accordion-header" id="headingOne" >
+      <button style="background-color: #070d18; color: white;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+        Accordion Item #1
+      </button>
+    </h2>
+    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+      <div class="accordion-body container">
+        <strong>This is the first item's accordion body.</strong> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam, ratione vel! Deserunt, in id? Incidunt amet veritatis voluptas! Quam tempore veritatis facilis unde nulla vel aliquid illo molestias labore similique. It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
       </div>
     </div>
-
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" style="background-color: #070d18; color: white;">
+        Accordion Item #2
+      </button>
+    </h2>
+    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+      <div class="accordion-body container">
+        <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingThree">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree" style="background-color: #070d18; color: white;">
+        Accordion Item #3
+      </button>
+    </h2>
+    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+      <div class="accordion-body container">
+        <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+      </div>
+    </div>
+  </div>
+</div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
