--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="section">
         <div class="navbar horizontal">
           <div>
-            <h1>LOGO</h1>
+            <h1>Trabaja Decente</h1>
           </div>
           <div class="horizontal">
             <button class="home">Inicio</button>
@@ -106,16 +106,6 @@
           <br />
         </div>
         <div class="section3-2 horizontal">
-          <div class="card1 vertical">
-            <div>
-              <img class="img-card" src="imagenes/calculator.png" alt="" />
-            </div>
-            <strong>Calculadora de prestaciones sociales</strong>
-            <p>
-              Saca el calculo de la tributacion que te corresponden a pagar de
-              manera sencilla y rápida.
-            </p>
-          </div>
           <div class="card2 vertical">
             <div>
               <a href="derecho.html">
@@ -131,12 +121,26 @@
           </div>
           <div class="card3 vertical">
             <div>
-              <img class="img-card" src="imagenes/legal-document.png" alt="" />
+              <a href="tributos.html">
+
+                <img class="img-card" src="imagenes/legal-document.png" alt=" tributos" />
+              </a>
             </div>
             <strong>Orientacion de tributacion</strong>
             <p>
               Todo lo que nesecitas saber sobre tributación y cuales te
               corresponde pagar.
+            </p>
+          </div>
+
+          <div class="card1 vertical">
+            <div>
+              <img class="img-card" src="imagenes/calculator.png" alt="" />
+            </div>
+            <strong>Calculadora de prestaciones sociales</strong>
+            <p>
+              Saca el calculo de la tributacion que te corresponden a pagar de
+              manera sencilla y rápida.
             </p>
           </div>
         </div>
@@ -174,6 +178,7 @@
         </div>
         <div class="espacio-bottom"></div>
       </div>
+      <!-- footer Copyright -->
       <div class="footer vertical">
         <p>© Copyright ©2022 All rights reserved</p>
       </div>
