--- a/tributos.html
+++ b/tributos.html
@@ -24,20 +24,20 @@
   <body id="body">
     <!-- header y navbar lateral -->
     <header  style="background-color: #070d18" class="sticky-top">
-        <div class="nav flex-colum" >
+        <div class="nav flex-column "  >
           <div class="navbar">
-            <nav class="navbar navbar-light fixed-end">
+            <nav class="navbar navbar-light fixed-top">
               <div class="container-fluid">
-                <a class="navbar-brand" href="derecho.html" style="color: white">
+                <a class="navbar-brand" href="tributos.html" style="color: white">
                   <img
-                    src="imagenes/lawyer-filling-document.jpg"
+                    src="imagenes/finance-and-accounting-concept-business-woman-working-on-desk.jpg"
                     alt=""
                     width="100"
                     height="64"
                     class="d-inline-block align-text-center"
                     style="border-radius: 15px; margin-right: 15px;"
                   />
-                  Derechos Laborales
+                  Deberes Tributarios
                 </a>
                 <button
                   class="navbar-toggler"
@@ -99,7 +99,7 @@
                         >
                       </li>
                       <li class="nav-item">
-                        <a style="color: white" class="nav-link" href="tributos.html"
+                        <a style="color: white" class="nav-link" href="#"
                           ><img
                             src="imagenes/money-bag (1).png"
                             alt="tributacion"
@@ -173,13 +173,13 @@
     </header>
     <!-- parrafo explicativo -->
     <div class="container m-4">
-      <h4>Derechos legales del trabajador</h4>
+      <h4>Deberes tributarios del trabajador</h4>
       <p>
         <p>
 
           aqui va una pequeña definicion 
         </p>
-        Lorem ipsum dolor, sit amet consectetur
+        Lorem ipsum dolor, sit amet consectetur Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, sapiente quibusdam nobis blanditiis optio voluptates vero corrupti fugit magnam delectus distinctio dolore labore dolorum modi recusandae quos veritatis rem in.
         adipisicing elit. Qui facere vero error, molestiae debitis saepe quo
         quia in culpa, tenetur maiores nulla libero nisi! Asperiores, atque!
         Minus, ipsam? Facere, natus. Quo doloremque impedit, at quae in
@@ -195,8 +195,8 @@
     </div>
     <!-- acordeones -->
     <div>
-<div class="accordion" id="accordionExample" >
-  <div class="accordion-item" >
+    <div class="accordion" id="accordionExample" >
+        <div class="accordion-item" >
     <h2 class="accordion-header" id="headingOne" >
       <button style="background-color: #070d18; color: white;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
         Accordion Item #1
@@ -216,10 +216,7 @@
     </h2>
     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
       <div class="accordion-body container m-3">
-                <p>
-          <strong>This is the second item's accordion body.</strong> Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic sequi officia quaerat voluptas obcaecati aspernatur et vel corporis dicta quod expedita, possimus molestias fuga eos vitae cupiditate nam autem adipisci? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam ipsa quisquam id laboriosam odit illum officia quasi ab fugiat harum alias magnam dolorum perferendis totam est aspernatur provident, voluptates cupiditate. Perferendis at itaque dolorum, laudantium nam repellendus obcaecati libero, ab impedit laborum corporis. Ullam cupiditate sed aspernatur repellat amet sapiente, est quod nulla iste aperiam consequatur excepturi voluptatibus, incidunt quidem!Labore voluptates placeat dolores laudantium, quae amet fugit. Perspiciatis amet quis, ratione distinctio sequi, velit quos ab nobis molestiae sapiente hic consequatur neque aspernatur? Impedit architecto consectetur enim odit quisquam. It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the accordion-body, though the transition does limit overflow.
-
-        </p>
+        <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
       </div>
     </div>
   </div>
@@ -255,7 +252,7 @@
       </div>
     <!-- footer Copyright -->
     <footer>
-      <div class="footer vertical">
+        <div class="footer vertical">
         <p>© Copyright ©2022 All rights reserved</p>
       </div>
     </footer>
