adicional hoja calculadoras

--- a/calculadora.html
+++ b/calculadora.html
@@ -20,25 +20,25 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Conoce tus derechos</title>
+    <title>Calculadoras</title>
   </head>
   <body id="body">
     <!-- header y navbar lateral -->
-        <header  style="background-color: #070d18" class="sticky-top">
+    <header  style="background-color: #070d18" class="sticky-top">
         <div class="nav flex-column "  >
           <div class="navbar">
             <nav class="navbar navbar-light fixed-top">
               <div class="container-fluid">
                 <a class="navbar-brand" href="tributos.html" style="color: white">
                   <img
-                    src="imagenes/grey-marble-column-details-on-building.jpg"
+                    src="imagenes/calculos-tributarios.jpg"
                     alt=""
                     width="100"
                     height="64"
                     class="d-inline-block align-text-center"
                     style="border-radius: 15px; margin-right: 15px;"
                   />
-                  Sunafil
+                  Calculadoras
                 </a>
                 <button
                   class="navbar-toggler"
@@ -150,14 +150,13 @@
     </header>
     <!-- parrafo explicativo -->
     <div class="container m-4">
-      <h4>Sunafil</h4>
+      <h4>Calculadoras de impuestos y prestaciones</h4>
       <p>
         <p>
 
           aqui va una pequeña definicion 
         </p>
-        Lorem ipsum dolor, sit amet consectetur Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum temporibus libero corrupti facilis? Id, illo ducimus sit, necessitatibus vel ab alias fuga cumque nobis inventore laboriosam sed maxime fugiat quasi!
-        Debitis alias dicta, sit cumque rerum sint quos nesciunt quod impedit? A saepe architecto dolorum dolores laudantium id excepturi consectetur neque! Maiores sunt debitis molestias maxime quibusdam eos quo sint!
+        Lorem ipsum dolor, sit amet consectetur Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, sapiente quibusdam nobis blanditiis optio voluptates vero corrupti fugit magnam delectus distinctio dolore labore dolorum modi recusandae quos veritatis rem in.
         adipisicing elit. Qui facere vero error, molestiae debitis saepe quo
         quia in culpa, tenetur maiores nulla libero nisi! Asperiores, atque!
         Minus, ipsam? Facere, natus. Quo doloremque impedit, at quae in
@@ -167,7 +166,7 @@
         voluptates? 
         <p>
 
-          a continuacion reflejaremos los preguntas mas comunes
+          a continuacion podras calcular los correspondiente de acuerdo a:
         </p>
       </p>
     </div>
@@ -176,8 +175,8 @@
     <div class="accordion" id="accordionExample" >
         <div class="accordion-item" >
     <h2 class="accordion-header" id="headingOne" >
-      <button style="background-color: #070d18; color: white;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-        Accordion Item #1
+      <button style="background-color: #070d18; color: white;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" id="prestaciones">
+        Calculo de Prestaciones
       </button>
     </h2>
     <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
@@ -189,7 +188,7 @@
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingTwo">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" style="background-color: #070d18; color: white;">
-        Accordion Item #2
+        Calculo de Impuestos
       </button>
     </h2>
     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
@@ -201,7 +200,7 @@
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingThree">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree" style="background-color: #070d18; color: white;">
-        Accordion Item #3
+        Persona No Dependiente
       </button>
     </h2>
     <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
