--- a/derecho.html
+++ b/derecho.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link
       href="https://fonts.googleapis.com/css2?family=Spline+Sans:wght@500&display=swap"
       rel="stylesheet"
@@ -23,12 +24,12 @@
   </head>
   <body id="body">
     <!-- header y navbar lateral -->
-    <header  style="background-color: #070d18" class="sticky-top">
-        <div class="nav flex-colum" >
+        <header  style="background-color: #070d18" class="sticky-top">
+        <div class="nav flex-column "  >
           <div class="navbar">
-            <nav class="navbar navbar-light fixed-end">
+            <nav class="navbar navbar-light fixed-top">
               <div class="container-fluid">
-                <a class="navbar-brand" href="derecho.html" style="color: white">
+                <a class="navbar-brand" href="tributos.html" style="color: white">
                   <img
                     src="imagenes/lawyer-filling-document.jpg"
                     alt=""
@@ -113,42 +114,18 @@
                         <a style="color: white" class="nav-link" href="sunafil.html"
                           ><img
                             src="imagenes/college.png"
-                            alt="tributacion"
+                            alt="sunafil"
                             width="50"
                             height="44"
                           />
                           Sunafil</a
                         >
                       </li>
-                      <li class="nav-item dropdown">
-                        <a
-                          style="color: white"
-                          class="nav-link dropdown-toggle"
-                          href="#"
-                          id="offcanvasNavbarDropdown"
-                          role="button"
-                          data-bs-toggle="dropdown"
-                          aria-expanded="false"
+                      <li class="nav-item">
+                        <a style="color: white" class="nav-link" href="calculadora.html">
+                          <i class="fas fa-calculator" style="font-size: 45px; margin-right: 9px;"></i>  
+                          Calculadoras</a
                         >
-                          Calculadoras
-                        </a>
-                        <ul
-                          class="dropdown-menu"
-                          aria-labelledby="offcanvasNavbarDropdown"
-                        >
-                          <li><a class="dropdown-item" href="#">...</a></li>
-                          <li>
-                            <a class="dropdown-item" href="#">...</a>
-                          </li>
-                          <li>
-                            <hr class="dropdown-divider" />
-                          </li>
-                          <li>
-                            <a class="dropdown-item" href="#"
-                              >Something else here</a
-                            >
-                          </li>
-                        </ul>
                       </li>
                     </ul>
                     <form class="d-flex">
