--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div>
               <a href="derecho.html">
 
-                <img class="img-card" src="imagenes/tax.png" alt="derechos" /></div>
+                <img class="img-card" src="imagenes/legal-document.png" alt="derechos" /></div>
               </a>
               
             <strong>Orientación de derechos laborales</strong>
@@ -111,7 +111,7 @@
             <div>
               <a href="tributos.html">
 
-                <img class="img-card" src="imagenes/legal-document.png" alt=" tributos" />
+                <img class="img-card" src="imagenes/tax.png" alt=" tributos" />
               </a>
             </div>
             <strong>Orientacion de tributacion</strong>
@@ -123,7 +123,9 @@
 
           <div class="card1 vertical">
             <div>
-              <img class="img-card" src="imagenes/calculator.png" alt="" />
+              <a href="calculadora.html">
+                <img class="img-card" src="imagenes/calculator.png" alt="" />
+              </a>
             </div>
             <strong>Calculadora de prestaciones sociales</strong>
             <p>
