--- a/tributos.html
+++ b/tributos.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="stylesDerecho.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -23,9 +24,9 @@
   </head>
   <body id="body">
     <!-- header y navbar lateral -->
-    <header  style="background-color: #070d18" class="sticky-top">
+    <header  style="background-color: rgb(66, 189, 236, 1) " class="sticky-top navbar-derechos">
         <div class="nav flex-column "  >
-          <div class="navbar">
+          <div class="navbar ">
             <nav class="navbar navbar-light fixed-top">
               <div class="container-fluid">
                 <a class="navbar-brand" href="tributos.html" style="color: white">
@@ -34,7 +35,7 @@
                     alt=""
                     width="100"
                     height="64"
-                    class="d-inline-block align-text-center"
+                    class="d-inline-block align-text-center img-derechos"
                     style="border-radius: 15px; margin-right: 15px;"
                   />
                   Deberes Tributarios
@@ -198,7 +199,7 @@
     <div class="accordion" id="accordionExample" >
         <div class="accordion-item" >
     <h2 class="accordion-header" id="headingOne" >
-      <button style="background-color: #070d18; color: white;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+      <button style="background-color: rgba(1, 132, 184, 0.9); color: white;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
         Accordion Item #1
       </button>
     </h2>
@@ -210,7 +211,7 @@
   </div>
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingTwo">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" style="background-color: #070d18; color: white;">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" style="background-color: rgba(1, 132, 184, 0.9); color: white;">
         Accordion Item #2
       </button>
     </h2>
@@ -222,7 +223,7 @@
   </div>
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingThree">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree" style="background-color: #070d18; color: white;">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree" style="background-color: rgba(1, 132, 184, 0.9); color: white;">
         Accordion Item #3
       </button>
     </h2>
